--- a/movies_admin/Dockerfile
+++ b/movies_admin/Dockerfile
@@ -13,9 +13,7 @@ COPY ./requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 COPY entrypoint.sh .
 
-# RUN chmod +x wsgi-entrypoint.sh
+RUN chmod +x entrypoint.sh
 
 # copy project
 COPY . .
-
-#ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
