--- a/movies_admin/envs/django.env.example
+++ b/movies_admin/envs/django.env.example
@@ -6,5 +6,5 @@ SECRET_KEY="django-insecure-r^yavcr*g2^qgrwgvzw(xkpxkca5qye1syatx#jw4n=!d*cfq8"
 DB_NAME=movies
 DB_USER=movies
 DB_PASSWORD=movies
-DB_HOST=localhost
+DB_HOST=postgres_db
 DB_PORT=5432
