--- a/movies_admin/docker-compose.yml
+++ b/movies_admin/docker-compose.yml
@@ -1,52 +1,56 @@
 version: '3'
 
 services:
-  db:
+  postgres_db:
+    container_name: postgres_db
     build:
       context: docker/postgres
       dockerfile: Dockerfile
-    environment:
-      - POSTGRES_PASSWORD=movies
-#      - POSTGRES_USER=movies
-#      - POSTGRES_DB=movies
+    env_file:
+      - envs/postgres.env
     volumes:
-      - C:\yandex_praktikum\postgres:/var/lib/postgresql/data/
+      - ..\..\postgres_data:/var/lib/postgresql/data
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./docker/postgres/file.backup:/file.backup
+    networks:
+      - movies_admin
     ports:
       - "5432:5432"
 
-  web:
+  django:
+    container_name: django
     build:
       context: ./
       dockerfile: Dockerfile
     command: ["/usr/src/app/entrypoint.sh"]
-#    volumes:
-#      - ./app/static:/usr/src/app/static
-#      - ./app/media:/usr/src/app/media
-#      - ./app/logs:/usr/src/app/logs
-#      - ./app/:/usr/src/app/
+    volumes:
+      - ./app/static:/usr/src/app/static
+      - ./app/media:/usr/src/app/media
     ports:
       - "8000:8000"
     expose:
       - 8000
     env_file:
-      - .env
+      - envs/django.env
+    networks:
+      - movies_admin
     depends_on:
-      - db
+      - postgres_db
 
-#
-#  nginx:
-#    build: docker/nginx
-#    volumes:
-#      - static_volume:/home/app/web/staticfiles
-#      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-#      - ./configs:/etc/nginx/conf.d:ro
-#    ports:
-#      - "80:80"
-#    depends_on:
-#      - web
-#
-#volumes:
-#  postgres_data:
-#  static_volume:
+  nginx:
+    image: nginx:1.19.0-alpine
+    container_name: nginx
+    volumes:
+      - ./app/static/:/static/
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx/site.conf:/etc/nginx/conf.d/site.conf:ro
+    ports:
+      - "80:80"
+    networks:
+      - movies_admin
+    depends_on:
+      - django
+      - postgres_db
 
+networks:
+  movies_admin:
