--- a/movies_admin/docker/nginx/nginx.conf
+++ b/movies_admin/docker/nginx/nginx.conf
@@ -1,17 +1,40 @@
-upstream hello_django {
-    server web:8000;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
 }
-server {
-    listen 80;
 
-    location / {
-        proxy_pass http://hello_django;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    server_tokens off;
+    log_format  main    '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location /static/ {
-        alias /home/app/web/staticfiles/;
-    }
+    sendfile        on;
+    tcp_nodelay     on;
+    tcp_nopush      on;
+    client_max_body_size 200m;
+
+    gzip on;
+    gzip_comp_level 3;
+    gzip_min_length 1000;
+    gzip_types
+        text/plain
+        text/css
+        application/json
+        application/x-javascript
+        text/xml
+        text/javascript;
+
+
+    proxy_redirect     off;
+    proxy_set_header   Host             $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+    include /etc/nginx/conf.d/site.conf;
 }
