--- a/movies_admin/docker/nginx/site.conf
+++ b/movies_admin/docker/nginx/site.conf
@@ -8,8 +8,12 @@ server {
         proxy_pass http://hello_django;
     }
 
-    location / {
+    location  ~ ^/api/ {
         try_files $uri $uri/ @proxy_api;
+    }
+
+    location /admin {
+        proxy_pass http://django:8000/admin;
     }
 
     location /static/ {
@@ -17,9 +21,5 @@ server {
         error_log off;
         autoindex on;
         alias /static/;
-    }
-
-    location /admin {
-        proxy_pass http://django:8000/admin;
     }
 }
