send for code review 3

--- a/movies_admin/docker/nginx/site.conf
+++ b/movies_admin/docker/nginx/site.conf
@@ -4,16 +4,8 @@ upstream hello_django {
 server {
     listen 80;
 
-    location @proxy_api {
+     location ~ ^/(admin|api) {
         proxy_pass http://hello_django;
-    }
-
-    location  ~ ^/api/ {
-        try_files $uri $uri/ @proxy_api;
-    }
-
-    location /admin {
-        proxy_pass http://django:8000/admin;
     }
 
     location /static/ {
